--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-#title: PouletEnSlip
-#description: Personal Website
+title: PouletEnSlip
+description: Personal Website
 remote_theme: lewismiddleton/cayman-dark
 github:
   is_project_page: true
