--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Had Cheat Sheet
-description: Étudiant passionné d'informatique et d'InfoSec
+title: PouletEnSlip
+description: Personal Website
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-cayman
+remote_theme: lewismiddleton/cayman-dark
