--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: PouletEnSlip
 description: Personal Website
 remote_theme: lewismiddleton/cayman-dark
+github:
+  is_project_page: true
+  repository_url: https://github.com/PouletEnSlip
