--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ github:
   is_project_page: true
   repository_url: https://github.com/PouletEnSlip
 
-theme: jekyll-theme-cayman
+remote_theme: lewismiddleton/cayman-dark
