--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman-Dark Theme
-description: Cayman-Dark is a dark mode adaptation of Cayman.
-show_downloads: true
+title: PouletEnSlip
+description: Personal Website.
+show_downloads: false
 google_analytics:
 remote_theme: lewismiddleton/cayman-dark
