--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: PouletEnSlip
-description: Personal Website.
+description: Personal Website
 show_downloads: false
 google_analytics:
 remote_theme: lewismiddleton/cayman-dark
