--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: PouletEnSlip
 description: Personal Website
+show_downloads: true
+google_analytics:
+remote_theme: lewismiddleton/cayman-dark
 github:
   is_project_page: true
   repository_url: https://github.com/PouletEnSlip
